syntax = "proto3";
package protobuf;
option go_package = "pb/protobuf";

message ResPayload {
    bytes secretKey = 1;
}